feat(#9): add blank stubs for emergency rooms
