# routes/pagination.go
@@ -1,0 +1,9 @@
+package routes
+
+type PaginatedResponse struct {
+	NumPages  uint
+	Page      uint
+	PageSize  uint
+	TotalSite uint
+	LastPage  bool
+}
